<resources>
    <string name="app_name">DiplProba</string>

    <string name="title_activity_login">Run \'n Hide</string>
    <string name="login">Prijava</string>
    <string name="reg">Kreiraj nalog</string>
    <string name="user_name">Korisničko ime</string>
    <string name="user_pass">Lozinka</string>

    <string name="title_activity_registration">Nalog</string>
    <string name="fname">Ime</string>
    <string name="lname">Prezime</string>
    <string name="email">E-mail</string>
    <string name="img">Učitaj sliku</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Predstojeće igre</string>
    <string name="search">Search</string>
    <string name="first">Predstojeće igre</string>
    <string name="second">Prijatelji</string>
    <string name="third">Nova igra</string>
    <string name="logout">Odjava</string>
    <string name="name">Naziv:</string>
    <string name="com">Opis:</string>
    <string name="creator">Kreirao:</string>
    <string name="date">Vreme:</string>
    <string name="address">Adresa:</string>
    <string name="conf">Dolaze:</string>
    <string name="inv">Pozvani:</string>
    <string name="createGame">Kreiraj igru</string>
    <string name="date1">Datum</string>
    <string name="time">Vreme</string>
    <string name="choose">Izaberi</string>
    <string name="choose1">Pozovi prijatelje</string>
    <string name="name1">Naziv</string>
    <string name="add">Adresa</string>
    <string name="com1">Opis</string>
    <string name="numfr">Broj pozvanih prijatelja:</string>
    <string name="requests">Zahtevi</string>
    <string name="cr">Kreirao</string>
    <string name="map">Mapa</string>
    <string name="start">Započni igru</string>
    <string name="rules">"   Ukoliko želite da učestvujete u nekoj od predstojećih igara, potrebno je pojaviti se u zakazano vreme na zakazanom mestu okupljanja same igre. Kreator igre započinje igru, i u narednih 10-ak sekundi ostali igrači pristupaju.
   Igrači imaju na raspolaganju određeno vreme da se rasporede u regionu, koji je prikazan na mapi. Nakon toga igra počinje, i svi igrači dobijaju svoje uloge.
   Osnovno pravilo je da niko ne sme da izađe van regiona igre, u suprotnom, biva izbačen. 'Tragači' za zadatak imaju da uhvate 'Koordinatora', a da pritom ne budu uhvaćeni od strane 'Zaštitnika'. 'Koordinator' navodi 'Zaštitnike' slanjem poruka, uz ograničenje da mu se nijedan 'Zaštitnik' ne sme naći u blizini od 30-ak metara, inače se igra zavšava u korist 'Tragača'.
   Crvenim krugom na mapi je obeležena sigurna zona za 'Koordinatora', i dok se nalazi u njoj, njegova pozicija se ne prikazuje na mapi 'Tragača'. Radijus i vreme koje 'Koordinator' sme da provede u sigurnoj zoni je određeno samom igrom. Ukoliko istekne dozvoljeno vreme, igra se završava pobedom 'Tragača'.
   'Zaštitnici' i 'Koordinator' pobedjuju ukoliko uhvate sve 'Tragače', dok 'Tragači' pobeđuju ako uhvate 'Koordinatora', ili ukoliko u igri ne ostane nijedan 'Zaštitnik'."</string>
    <string name="ruless">Pravila igre</string>
    <string name="safezone">Sigurna zona</string>
    <string name="safeRad">Radijus sigurne zone: 25m</string>
    <string name="safeTime">Dozvoljeno vreme u sigurnoj zoni: 50s</string>
    <string name="safeH">Radijus i vreme sigurne zone:</string>

    <string name="invFr">Pozvani igrači</string>
    <string name="confFr">Potvrdili dolazak</string>
    <string name="delete">Izbaci igru</string>
    <string name="confGame">Potvrdi dolazak</string>
    <string name="nav">Navigacija</string>
    <string name="join">Prijavi se</string>

    <string name="enterMes">Unesite poruku...</string>

    <string name="title_activity_map">Example action</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_game">ImeIgre</string>
    <string name="title_activity_chat">Chat</string>

</resources>
