<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/group1" >
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:title="@string/first" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/second" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_control_point_black_24dp"
            android:title="@string/third" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group2" >
        <item
            android:id="@+id/rules"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/ruless" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>