<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.simon.diplproba.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusableInTouchMode="true"
    android:id="@+id/logLL"
    android:background="#FFD180">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Run &apos;n"
        android:id="@+id/a1"
        android:layout_gravity="center_horizontal"
        android:textColor="#8A2C30"
        android:textSize="91dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Hide"
        android:id="@+id/a2"
        android:layout_gravity="center_horizontal"
        android:textColor="#8A2C30"
        android:textSize="91dp"
        android:layout_marginTop="-15dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="40dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_name"
            android:background="@drawable/myedittext"
            android:padding="7dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/user_pass"
            android:background="@drawable/myedittext"
            android:padding="7dp" />
</android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:onClick="onLoginBtn"
        android:background="@drawable/mybutton"
        android:stateListAnimator="@drawable/my_animator"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:id="@+id/reg"
        android:layout_gravity="center_horizontal"
        android:onClick="onRegBtn"
        android:background="@drawable/mybutton"
        android:stateListAnimator="@drawable/my_animator"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp" />

</LinearLayout>
